# monitor

./: Cargo.toml  command.md  postman_collection.json
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  route.rs
src/handler/: auth.rs  users.rs
src/mail/: mail.rs  mod.rs  sendmail.rs
src/mail/templates/: RestPassword-email.html  Verification-email.html  Welcome-email.html
src/utils/: password.rs  token.rs
